# mlx-lm-omni

./: README.md  pyproject.toml
convert/: qwen25_omni.py
demo/: simple.py  simple_qwen25_omni.py  simple_ultravox_omni.py
src/mlx_lm_audio/: audio_mel.py  tokenizer.py  utils.py
src/mlx_lm_audio/models/qwen_omni/: audio_tower.py  model.py  thinker.py
src/mlx_lm_omni/: __init__.py  tokenizer.py  utils.py
src/mlx_lm_omni/models/qwen_omni/: audio_tower.py  model.py
src/mlx_lm_omni/models/ultravox/: model.py
