[project]
name = "mlx-lm-audio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Giang Minh", email = "giangndm@ows.vn" }
]
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.25.1",
    "mlx-lm>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "librosa>=0.11.0",
]
